--- a/jsonSchemaLib/css/JsonSchema.css
+++ b/jsonSchemaLib/css/JsonSchema.css
@@ -33,7 +33,7 @@
 
 .js-View {
     background-color: rgb(190, 127, 127);
-    width: 65%;
+    width: 100%;
     margin: 0 .5rem .5rem .5rem;
     max-height: 39rem;
     padding: .5rem;
@@ -41,7 +41,7 @@
 
 .js-Config {
     background-color: rgb(241, 196, 196);
-    width: 35%;
+    min-width: 25rem;
     max-height: 40rem;
     margin: 0 .5rem .5rem 0;
 }
