--- a/jsonSchemaLib/css/JsonSchema.css
+++ b/jsonSchemaLib/css/JsonSchema.css
@@ -39,11 +39,19 @@
     padding: .5rem;
 }
 
+
 .js-Config {
-    background-color: rgb(241, 196, 196);
-    min-width: 25rem;
-    max-height: 40rem;
     margin: 0 .5rem .5rem 0;
+}
+
+.js-Config-show {
+    width: 40rem;
+    max-width: 40rem;
+    max-height: 40rem;
+}
+
+.js-Config-hide {
+    height: fit-content;
 }
 
 .js-header,
